--- a/AIAPITestTool.csproj
+++ b/AIAPITestTool.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="OpenAI" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
